# smart-qna

./: .gitignore  Dockerfile  cloudbuild.yaml  docker-compose.yml  pyproject.toml
app/: main.py  rag_chain.py
notebooks/: ingest_data.ipynb  retrieve_information.ipynb
